fix sidebar position on mobile

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   display: flex;
   align-items: center;
   min-height: 64px;
