--- a/src/components/sidebar-profile/sidebar-profile.module.css
+++ b/src/components/sidebar-profile/sidebar-profile.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   position: fixed;
-  top: 64px;
+  top: 72px;
   right: 0;
   bottom: 0;
   z-index: 2;
